summary added, build number bump

--- a/recipes/fastk/meta.yaml
+++ b/recipes/fastk/meta.yaml
@@ -11,7 +11,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   skip: true # [osx]
 
 requirements:
@@ -30,5 +30,5 @@ test:
 
 about:
   license: MIT
-  summary: A tool.
+  summary: FastK is a k‑mer counter that is optimized for processing high quality DNA assembly data sets such as those produced with an Illumina instrument or a PacBio run in HiFi mode.
   home: https://github.com/thegenemyers/FASTK
